[package]
name = "cdtoc"
version = "0.13.1"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.94"
description = "Parser and tools for CDTOC metadata tags."
license = "WTFPL"
repository = "https://github.com/Blobfolio/cdtoc"
readme = "README.md"
keywords = [ "cdtoc", "accuraterip", "cddb", "ctdb", "musicbrainz" ]
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
]

[package.metadata.bashman]
name = "CDTOC"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
features = [ "accuraterip", "cddb", "ctdb", "musicbrainz", "serde" ]
default-target = "x86_64-unknown-linux-gnu"

[dev-dependencies]
brunch = "0.11.*"
serde_json = "1.0.*"

[dependencies]
dactyl = "0.13.*"

[dependencies.serde_core]
version = "1.0.*"
optional = true

[dependencies.sha1]
version = "0.11.*"
optional = true

[features]
default = [ "accuraterip", "cddb", "ctdb", "musicbrainz" ]

# Enable AccurateRip ID calculations.
accuraterip = [ "cddb" ]

# Enable CDDB ID calculations.
cddb = []

# Enable CUETools Database ID calculations.
ctdb = [ "sha1" ]

# Enable MusicBrainz ID calculations.
musicbrainz = [ "sha1" ]

# Enable de/serialization support for most types.
serde = [ "dep:serde_core" ]

[[bench]]
name = "accuraterip"
required-features = [ "accuraterip" ]
harness = false

[[bench]]
name = "cddb"
required-features = [ "cddb" ]
harness = false

[[bench]]
name = "ctdb"
required-features = [ "ctdb" ]
harness = false

[[bench]]
name = "musicbrainz"
required-features = [ "musicbrainz" ]
harness = false

[[bench]]
name = "toc"
harness = false
